tests/errors/invalid_cast.pyx
def f():
    a = <foao>x

_ERRORS = """
2:13: Unknown type
"""